# Ziv

./: .gitignore  CMakeLists.txt  README.md  bytecode_executor.hpp  bytecode_translator.hpp  helper_header.hpp  main.cpp  main.zef  main.zev  main.zevo  main.ziv  memory_management.hpp
bytecode_executor/: bytecode_executor.cpp  bytecode_executor.hpp  handle_concat_instruction.cpp  handle_concat_instruction.hpp  handle_print_instruction.cpp  handle_print_instruction.hpp  handle_variable_declaration.cpp  handle_variable_declaration.hpp
bytecode_translator/: bytecode_translator.cpp  bytecode_translator.hpp  globals.cpp  globals.hpp  handle_function_declaration.cpp  handle_function_declaration.hpp  handle_print_statement.cpp  handle_print_statement.hpp  handle_variable_declaration.cpp  handle_variable_declaration.hpp  tokenize_statement.cpp  tokenize_statement.hpp  translate_line.cpp  translate_line.hpp
helper/: helper.cpp  helper.hpp
memory/: memory_management.cpp  memory_management.hpp
